Allow extending the service worker template
Fixes #4

--- a/src/view/frontend/templates/serviceworker.js.phtml
+++ b/src/view/frontend/templates/serviceworker.js.phtml
@@ -81,3 +81,10 @@ wbsw.router.setDefaultHandler({
         }
     },
 });
+
+<?php if ($childHtml = $block->getChildHtml()): ?>
+// Extensions
+// #####################################
+
+<?php echo $childHtml ?>
+<?php endif; ?>
