--- a/src/view/frontend/templates/register.phtml
+++ b/src/view/frontend/templates/register.phtml
@@ -1,7 +1,7 @@
 <?php /** @var \Meanbee\ServiceWorker\Block\Register $block */ ?>
 <?php if ($block->isEnabled()): ?>
     <script type="text/javascript">
-        (() => {
+        (function () {
             if ('serviceWorker' in navigator) {
                 navigator.serviceWorker
                     .register('<?php echo $block->getServiceWorkerJsUrl() ?>')
